# manipulator_description

./: CMakeLists.txt  package.xml
launch/: description.launch.py  display.launch.py
meshes/: Body_1.stl  Component14_1.stl  Cross_tendon_link_1.stl  Fing_fing_end_1.stl  Fingend_Solid_1.stl  base_link.stl  cutter_1.stl  finger_bottom_link_1.stl  finger_bottom_link_1_1.stl  finger_center_link_1.stl  finger_center_link_1_1.stl  finger_top_link_1.stl  finger_top_link_1_1.stl  gripper_bracket_1.stl  gripper_support_link_1.stl  gripper_support_link_1_1.stl  gripper_support_top_link_1.stl  gripper_support_top_link_1_1.stl  left_scissor_link_1.stl  right_scissor_link_1.stl  robot_head_bottom_1.stl  robot_head_top_1.stl  scessor_scew_link_1.stl
urdf/: Assemv6.gazebo  Assemv6.trans  arm.urdf.xacro  custom_gripper.urdf.xacro  gen3.urdf.xacro  gen3_custom_gripper.urdf.xacro  gen3_gripper.xacro  materials.xacro  robot_assembly.xacro
